--- a/HuaShanApp/app/src/main/res/values/styles.xml
+++ b/HuaShanApp/app/src/main/res/values/styles.xml
@@ -52,4 +52,11 @@
         <item name="android:windowExitAnimation">@anim/actionsheet_dialog_out</item>
     </style>
 
+
+    <style name="CustomCheckboxTheme" parent="@android:style/Widget.CompoundButton.CheckBox">
+        <item name="android:button">@drawable/bg_checkbox</item>
+        <item name="android:paddingLeft">2dip</item>
+        <item name="android:maxHeight">1dip</item>
+    </style>
+
 </resources>
