--- a/HuaShanApp/app/src/main/res/layout/activity_home.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_home.xml
@@ -154,32 +154,32 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:descendantFocusability="beforeDescendants"
-                    android:gravity="center"
-                    android:onClick="@{handler.toApply}"
-                    android:orientation="vertical">
+                <!--<LinearLayout-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:descendantFocusability="beforeDescendants"-->
+                    <!--android:gravity="center"-->
+                    <!--android:onClick="@{handler.toApply}"-->
+                    <!--android:orientation="vertical">-->
 
-                    <ImageView
-                        android:id="@+id/mall_img"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:padding="5dp"
-                        android:background="@drawable/bg_mall_img"
-                        />
+                    <!--<ImageView-->
+                        <!--android:id="@+id/mall_img"-->
+                        <!--android:layout_width="30dp"-->
+                        <!--android:layout_height="30dp"-->
+                        <!--android:padding="5dp"-->
+                        <!--android:background="@drawable/bg_mall_img"-->
+                        <!--/>-->
 
-                    <TextView
-                        android:id="@+id/mall_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="积分"
-                        android:textSize="@dimen/homeactivity_bottom_text_size"
-                        android:textStyle="bold" />
+                    <!--<TextView-->
+                        <!--android:id="@+id/mall_text"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:text="积分"-->
+                        <!--android:textSize="@dimen/homeactivity_bottom_text_size"-->
+                        <!--android:textStyle="bold" />-->
 
-                </LinearLayout>
+                <!--</LinearLayout>-->
 
 
                 <LinearLayout
