--- a/HuaShanApp/app/src/main/res/layout/fragment_my.xml
+++ b/HuaShanApp/app/src/main/res/layout/fragment_my.xml
@@ -62,6 +62,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingBottom="10dp"
                     android:orientation="vertical">
 
                     <!--part1-->
@@ -287,7 +288,8 @@
                     <android.support.percent.PercentFrameLayout
                         android:layout_width="match_parent"
                         android:layout_height="70dp"
-                        android:background="#fff">
+                        android:background="#fff"
+                        android:onClick="@{handler.BankCard}">
 
                         <ImageView
                             app:layout_widthPercent="6%"
@@ -321,7 +323,8 @@
                     <android.support.percent.PercentFrameLayout
                         android:layout_width="match_parent"
                         android:layout_height="70dp"
-                        android:background="#fff">
+                        android:background="#fff"
+                        android:onClick="@{handler.Transaction}">
 
                         <ImageView
                             app:layout_widthPercent="6%"
