--- a/HuaShanApp/app/src/main/res/layout/layout_biding_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/layout_biding_item.xml
@@ -56,7 +56,7 @@
         android:id="@+id/fl_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:layout_marginBottom="5dp"
         android:visibility="gone">
 
 
